--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   #firebase
   firebase_core: ^2.13.1
+
   #weather packages
+  flutter_spinkit: ^5.2.0
+  font_awesome_flutter: ^10.4.0
+  location: ^4.4.0
+  http: ^1.0.0
+  geolocator: ^9.0.2
+
+  #state management
+  provider: ^6.0.5
+  riverpod: ^2.3.6
+
 
 
 dev_dependencies:
