--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,6 @@ name: f6_bootcamp
 description: A new Flutter project.
 
 publish_to: 'none'
-
-
 version: 1.0.0+1
 
 environment:
@@ -17,6 +15,7 @@ dependencies:
 
   #firebase
   firebase_core: ^2.13.1
+  cloud_firestore: ^4.8.0
 
   #weather packages
   flutter_spinkit: ^5.2.0
@@ -34,41 +33,21 @@ dependencies:
   intl: ^0.18.1
 
   #calendar
-  calendar_view: ^1.0.3
-
-
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
   flutter_lints: ^2.0.0
 
-
 flutter:
-
-
   uses-material-design: true
-
 
   assets:
     - assets/icons/
     - assets/images/
-  #   - images/a_dot_ham.jpeg
-
 
   fonts:
     - family: OpenSans
       fonts:
         - asset: assets/fonts/OpenSans-Italic.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
