--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,28 +12,31 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-
   #firebase
-  firebase_core: ^2.13.1
+  firebase_core: ^2.14.0
   cloud_firestore: ^4.8.0
-
+  firebase_storage: ^11.2.1
+  firebase_auth: ^4.6.3
+  google_sign_in: ^6.1.4
   #weather packages
   flutter_spinkit: ^5.2.0
   font_awesome_flutter: ^10.4.0
   location: ^4.4.0
-  http: ^1.0.0
+  http: ^0.13.6
   geolocator: ^9.0.2
-
   #state management
   provider: ^6.0.5
   riverpod: ^2.3.6
-
   #translate
   flutter_translate: ^4.0.4
   intl: ^0.18.1
-
   #calendar
   table_calendar: ^3.0.9
+  #image
+  image_picker: ^0.8.9
+  image_cropper: ^4.0.0
+
+
 
 dev_dependencies:
   flutter_test:
