--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_storage: ^11.2.1
   firebase_auth: ^4.6.3
   google_sign_in: ^6.1.4
+
   #weather packages
   flutter_spinkit: ^5.2.0
   font_awesome_flutter: ^10.4.0
@@ -32,11 +33,12 @@ dependencies:
   intl: ^0.18.1
   #calendar
   table_calendar: ^3.0.9
-  #image
+  #wardrobe
   image_picker: ^0.8.9
   image_cropper: ^4.0.0
   multi_select_flutter: ^4.1.3
   dropdown_button2: ^2.3.4
+
 
 
 
