--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,7 @@ dependencies:
   image_cropper: ^4.0.0
   multi_select_flutter: ^4.1.3
   dropdown_button2: ^2.3.4
-
-
-
+  flutter_snake_navigationbar: ^0.6.1
 
 
 dev_dependencies:
