--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: f6_bootcamp
+name: Giyin
 description: A new Flutter project.
 
 publish_to: 'none'
@@ -39,7 +39,7 @@ dependencies:
   multi_select_flutter: ^4.1.3
   dropdown_button2: ^2.3.4
   flutter_snake_navigationbar: ^0.6.1
-
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
