--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dropdown_button2: ^2.3.4
   flutter_snake_navigationbar: ^0.6.1
   smooth_page_indicator: ^1.1.0
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
