--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_snake_navigationbar: ^0.6.1
   smooth_page_indicator: ^1.1.0
   change_app_package_name: ^1.1.0
+  flutter_animate: ^4.2.0
 
 dev_dependencies:
   flutter_test:
