--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/google-services.json
+/lib/src/service/firebase_options.dart
 /lib/ignore.dart
