--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,3 +60,8 @@ flutter:
     - family: OpenSans
       fonts:
         - asset: assets/fonts/OpenSans-Italic.ttf
+    - family: Rowdies
+      fonts:
+          - asset: assets/fonts/Rowdies-Bold.ttf
+          - asset: assets/fonts/Rowdies-Light.ttf
+          - asset: assets/fonts/Rowdies-Regular.ttf
